--- a/index.html
+++ b/index.html
@@ -11,75 +11,157 @@ header{background:linear-gradient(90deg,#ff9ecf,#ff6fb5);color:#fff;padding:20px
 .container{padding:15px;max-width:900px;margin:auto}
 .card{background:#fff;padding:15px;margin-bottom:15px;border-radius:20px;box-shadow:0 4px 12px rgba(255,105,180,0.2)}
 input,select,textarea,button{width:100%;padding:10px;margin-top:8px;border-radius:12px;border:1px solid #ffc1e3;font-size:14px}
-button{background:#ff6fb5;color:#fff;border:none;font-weight:600}
+button{background:#ff6fb5;color:#fff;border:none;font-weight:600;cursor:pointer}
 .badge{display:inline-block;background:#ffb3d9;padding:4px 8px;border-radius:20px;font-size:11px;color:#fff}
 .product{margin-bottom:10px;padding-bottom:10px;border-bottom:1px dashed #ffd1ea}
+.cart-item{border-bottom:1px dashed #ffd1ea;padding:5px 0}
+.total{font-weight:700;margin-top:10px;font-size:16px}
+.rekening-box{background:#fff5fa;padding:10px;border-radius:12px;margin-top:10px;display:none}
 </style>
 </head>
 <body>
+
 <header>
 <h1>🍩 SaAya Donat</h1>
 <p>Donat Fresh Garut</p>
 </header>
 
 <div class="container">
+
 <div class="card">
 <h3>Menu Donat</h3>
 <div id="productList"></div>
 </div>
 
 <div class="card">
+<h3>🛒 Keranjang</h3>
+<div id="cartList"></div>
+<div class="total">Total: Rp <span id="totalPrice">0</span></div>
+</div>
+
+<div class="card">
 <h3>Data Pemesan</h3>
 <input id="bName" placeholder="Nama">
+<input id="bPhone" placeholder="No WhatsApp">
 <textarea id="bAddress" placeholder="Alamat Lengkap"></textarea>
-<select id="bMethod">
+
+<select id="bMethod" onchange="toggleRekening()">
 <option value="COD">COD</option>
 <option value="Transfer">Transfer</option>
 </select>
+
+<div class="rekening-box" id="rekeningBox">
+<b>Pembayaran Transfer ke:</b><br>
+Bank: <b>BCA</b><br>
+No Rekening: <b>1234567890</b><br>
+Atas Nama: <b>SaAya Donat</b>
+</div>
+
 <button onclick="checkout()">Pesan Sekarang</button>
 </div>
+
 </div>
 
 <script>
 let products=JSON.parse(localStorage.getItem('products')||'[]');
-let orders=JSON.parse(localStorage.getItem('orders')||'[]');
 let cart=[];
-
-function save(){
-localStorage.setItem('products',JSON.stringify(products));
-localStorage.setItem('orders',JSON.stringify(orders));
-}
 
 function render(){
 let html='';
 products.forEach((p,i)=>{
 if(p.stock>0){
-html+=`<div class="product"><b>${p.name}</b><br>Rp ${p.price}<br><span class="badge">Stok ${p.stock}</span><br><button onclick="addCart(${i})">Tambah</button></div>`;
-}else{
-html+=`<div class="product"><b>${p.name}</b><br><span class="badge">Stok Habis</span></div>`;
+html+=`
+<div class="product">
+<b>${p.name}</b><br>
+Rp ${p.price}<br>
+<span class="badge">Stok ${p.stock}</span><br>
+<button onclick="addCart(${i})">Tambah</button>
+</div>`;
 }
 });
 document.getElementById('productList').innerHTML=html;
+renderCart();
 }
 
-function addCart(i){cart.push({index:i,qty:1});alert('Ditambahkan ke keranjang');}
+function addCart(i){
+let existing=cart.find(c=>c.index===i);
+if(existing){ existing.qty++; }
+else{ cart.push({index:i,qty:1}); }
+renderCart();
+}
+
+function removeCart(i){
+cart.splice(i,1);
+renderCart();
+}
+
+function renderCart(){
+let html='';
+let total=0;
+
+cart.forEach((c,i)=>{
+let p=products[c.index];
+let subtotal=p.price*c.qty;
+total+=subtotal;
+
+html+=`
+<div class="cart-item">
+${p.name} (${c.qty}) - Rp ${subtotal}
+<button onclick="removeCart(${i})">Hapus</button>
+</div>`;
+});
+
+document.getElementById('cartList').innerHTML=html||'Keranjang kosong';
+document.getElementById('totalPrice').innerText=total;
+}
+
+function toggleRekening(){
+let metode=bMethod.value;
+document.getElementById('rekeningBox').style.display=
+metode==="Transfer"?"block":"none";
+}
 
 function checkout(){
 if(cart.length===0)return alert('Keranjang kosong');
+
+let name=bName.value;
+let phone=bPhone.value;
+let address=bAddress.value;
+let method=bMethod.value;
+
+if(!name || !phone || !address){
+return alert('Lengkapi data terlebih dahulu');
+}
+
 let total=0;
+let pesan=`Halo, saya ingin pesan:%0A%0A`;
+
 cart.forEach(c=>{
 let p=products[c.index];
-p.stock-=c.qty;
-total+=p.price*c.qty;
-orders.push({date:new Date().toLocaleDateString(),name:bName.value,product:p.name,qty:c.qty,total:p.price*c.qty});
+let subtotal=p.price*c.qty;
+total+=subtotal;
+pesan+=`${p.name} (${c.qty}) - Rp ${subtotal}%0A`;
 });
-save();
+
+pesan+=`%0ATotal: Rp ${total}%0A`;
+pesan+=`%0ANama: ${name}%0A`;
+pesan+=`No WA: ${phone}%0A`;
+pesan+=`Alamat: ${address}%0A`;
+pesan+=`Metode: ${method}%0A`;
+
+if(method==="Transfer"){
+pesan+=`%0ASaya akan transfer ke rekening yang tertera dan kirim bukti pembayaran.`;
+}
+
+let noWA="628XXXXXXXXXX"; // GANTI NOMOR WA KAMU
+window.open(`https://wa.me/${noWA}?text=${pesan}`,'_blank');
+
 cart=[];
-alert('Pesanan berhasil ❤️');
-render();
+renderCart();
 }
 
 render();
 </script>
+
 </body>
 </html>
