--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ if(method==="Transfer"){
 pesan+=`%0ASaya akan transfer ke rekening yang tertera dan kirim bukti pembayaran.`;
 }
 
-let noWA="628XXXXXXXXXX"; // GANTI NOMOR WA KAMU
+let noWA="6287789130676"; // GANTI NOMOR WA KAMU
 window.open(`https://wa.me/${noWA}?text=${pesan}`,'_blank');
 
 cart=[];
