--- a/admin.html
+++ b/admin.html
@@ -96,6 +96,17 @@ function login(){
 function logout(){
   localStorage.removeItem("adminLogin");
   location.reload();
+  <button onclick="resetProducts()" style="background:orange;margin-bottom:5px">
+Reset Produk
+</button>
+
+<button onclick="resetOrders()" style="background:#e67e22;margin-bottom:5px">
+Reset Orders
+</button>
+
+<button onclick="resetAll()" style="background:red;margin-bottom:10px">
+Reset Semua Data
+</button>
 }
 
 // ================= LOAD PRODUCTS =================
